--- a/static/reset.css
+++ b/static/reset.css
@@ -51,5 +51,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
-
+button {
+  background-color: transparent;
+  text-align: start;
+}
